--- a/app/src/main/res/layout/content_add_to_pantry.xml
+++ b/app/src/main/res/layout/content_add_to_pantry.xml
@@ -17,16 +17,18 @@
         android:layout_width="60dp"
         android:layout_height="20dp"
         android:id="@+id/itemNameTextView"
-        android:textSize="@dimen/abc_text_size_headline_material"
         android:layout_alignParentTop="true"
         android:layout_alignLeft="@+id/unitSpinner"
-        android:layout_alignStart="@+id/unitSpinner" />
+        android:layout_alignStart="@+id/unitSpinner"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#2c43b9"
+        android:textStyle="bold" />
 
     <View
         android:layout_width="fill_parent"
         android:layout_height="2dip"
         android:background="#858e85"
-        android:layout_above="@+id/textView"
+        android:layout_above="@+id/categoryTextView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
