--- a/app/src/main/res/layout/shopping_list.xml
+++ b/app/src/main/res/layout/shopping_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,7 +12,9 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/textViewLabelItem"
-        android:layout_marginBottom="2dp" />
+        android:layout_marginBottom="2dp"
+        android:layout_margin="10dp"
+        android:choiceMode="none" />
 
 
     <TextView
@@ -21,7 +23,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:text="Items"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#173fc5" />
-</LinearLayout>
+        android:text="Shopping List"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#173fc5"
+        android:textStyle="bold"/>
+</RelativeLayout>
