--- a/app/src/main/res/layout/inventory_layout.xml
+++ b/app/src/main/res/layout/inventory_layout.xml
@@ -26,7 +26,8 @@
         android:layout_alignParentBottom="true"
         android:layout_below="@+id/textView5"
         android:layout_margin="10dp"
-        android:choiceMode="none" />
+        android:clickable="true"
+        android:focusable="true" />
 
 
 </RelativeLayout>
