--- a/app/src/main/res/layout/pantry_list_row.xml
+++ b/app/src/main/res/layout/pantry_list_row.xml
@@ -7,7 +7,8 @@
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:checked="false" />
+        android:checked="false"
+        android:focusable="false" />
 
     <TextView
         android:id="@+id/itemNameTextView"
