--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="toolbar_height">56dp</dimen>
     <dimen name="tabstrip_icon_spacing_normal">0dp</dimen>
     <dimen name="tabstrip_icon_spacing">@dimen/tabstrip_icon_spacing_normal</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
