Solved null point exception . Still it has some problem , that has arise due to merging .I am working on it .

--- a/app/src/main/res/layout/content_add_to_pantry.xml
+++ b/app/src/main/res/layout/content_add_to_pantry.xml
@@ -49,7 +49,8 @@
         android:inputType="number"
         android:layout_alignBottom="@+id/quantityTextView"
         android:layout_alignLeft="@+id/priceEditText"
-        android:layout_alignStart="@+id/priceEditText" />
+        android:layout_alignStart="@+id/priceEditText"
+        android:text="1" />
 
     <Spinner
         android:layout_width="wrap_content"
