--- a/app/src/main/res/layout/barcode_layout.xml
+++ b/app/src/main/res/layout/barcode_layout.xml
@@ -6,6 +6,7 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:background="#ffffff"
 android:orientation="vertical"
+    android:screenOrientation="portrait"
 tools:context="com.javacodegeeks.androidstartactivityforresultexample.ActivityOne" >
 
 <TextView
