--- a/app/src/main/res/layout/barcode_layout.xml
+++ b/app/src/main/res/layout/barcode_layout.xml
@@ -58,7 +58,8 @@ tools:context="com.javacodegeeks.androidstartactivityforresultexample.ActivityOn
             android:layout_alignLeft="@+id/textViewProductName"
             android:layout_alignStart="@+id/textViewProductName"
             android:layout_alignRight="@+id/textViewProductName"
-            android:layout_alignEnd="@+id/textViewProductName" />
+            android:layout_alignEnd="@+id/textViewProductName"
+            android:layout_marginBottom="10dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -71,7 +72,8 @@ tools:context="com.javacodegeeks.androidstartactivityforresultexample.ActivityOn
             android:layout_alignParentStart="true"
             android:layout_toLeftOf="@+id/textViewProductName"
             android:layout_toStartOf="@+id/textViewProductName"
-            android:layout_margin="10dp" />
+            android:layout_margin="10dp"
+            android:layout_marginBottom="10dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -82,7 +84,8 @@ tools:context="com.javacodegeeks.androidstartactivityforresultexample.ActivityOn
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_margin="10dp" />
+            android:layout_margin="10dp"
+            android:layout_marginBottom="10dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -91,10 +94,12 @@ tools:context="com.javacodegeeks.androidstartactivityforresultexample.ActivityOn
             android:text="Product Name"
             android:id="@+id/textViewProductName"
             android:layout_gravity="center_horizontal"
-            android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/textViewPrLabel"
-            android:layout_toEndOf="@+id/textViewPrLabel"
-            android:layout_margin="10dp" />
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_alignTop="@+id/textViewPrLabel"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
 
 
     </RelativeLayout>
