--- a/app/src/main/res/layout/inventory_layout.xml
+++ b/app/src/main/res/layout/inventory_layout.xml
@@ -24,10 +24,24 @@
         android:id="@+id/pantryListView"
         android:layout_gravity="center_vertical"
         android:layout_alignParentBottom="true"
-        android:layout_below="@+id/textView5"
-        android:layout_margin="10dp"
         android:clickable="true"
-        android:focusable="true" />
+        android:focusable="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_below="@+id/textView8" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Expiry Date"
+        android:id="@+id/textView8"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/textView5"
+        android:gravity="right|end"
+        android:layout_margin="5dp" />
 
 
 </RelativeLayout>
