--- a/app/src/main/res/layout/inventory_list_row.xml
+++ b/app/src/main/res/layout/inventory_list_row.xml
@@ -1,23 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="1">
 
     <CheckBox
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:checked="false"
-        android:focusable="false" />
+        android:focusable="false"
+        android:layout_margin="2dp"
+        android:layout_marginTop="2dp" />
 
     <TextView
         android:id="@+id/itemNameTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:paddingTop="25dp"
         android:text="New Text"
         android:textSize="15dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_margin="2dp"
+        android:layout_marginTop="0.5dp" />
 
     <TextView
         android:id="@+id/quantityTextView"
@@ -27,25 +32,19 @@
         android:paddingTop="25dp"
         android:text="New Text"
         android:textSize="15dp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="30dp"
-        android:paddingTop="25dp"
-        android:text="Expires On"
-        android:textSize="15dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_margin="2dp"
+        android:layout_marginTop="0.5dp" />
 
     <TextView
         android:id="@+id/expDateTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
         android:paddingTop="25dp"
         android:text="New Text"
         android:textSize="15dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_margin="2dp"
+        android:layout_marginTop="0.5dp" />
 </LinearLayout>
