--- a/app/src/main/res/layout/content_item_listing.xml
+++ b/app/src/main/res/layout/content_item_listing.xml
@@ -20,24 +20,21 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/searchView" />
 
-    <TextView
-        android:id="@+id/textViewLabelItem"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:paddingTop="25dp"
-        android:text="Items"
-        android:textSize="15dp"
-        android:textStyle="bold" />
+    <Button
+        android:layout_width="35dp"
+        android:layout_height="45dp"
+        android:id="@+id/start_reg"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/speechtotext" />
 
     <SearchView
         android:id="@+id/searchView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/listViewItem"
-        android:layout_alignRight="@+id/listViewItem"
-        android:layout_below="@+id/textViewLabelItem"
-        android:queryHint="Search ..." />
+        android:queryHint="Search ..."
+        android:layout_alignTop="@+id/start_reg"
+        android:layout_toLeftOf="@+id/start_reg"
+        android:layout_toStartOf="@+id/start_reg" />
 
 </RelativeLayout>
