--- a/app/src/main/res/layout/inventory_layout.xml
+++ b/app/src/main/res/layout/inventory_layout.xml
@@ -43,5 +43,14 @@
         android:gravity="right|end"
         android:layout_margin="5dp" />
 
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete"
+        android:id="@+id/deleteButton"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
 
 </RelativeLayout>
