--- a/app/src/main/res/layout/shopping_list.xml
+++ b/app/src/main/res/layout/shopping_list.xml
@@ -7,14 +7,11 @@
     <ListView
         android:id="@+id/ShoppingBagListView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textViewLabelItem"
-        android:layout_marginBottom="2dp"
-        android:layout_margin="10dp"
-        android:choiceMode="none" />
+        android:layout_height="500dp"
+        android:choiceMode="none"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/shareButton" />
 
 
     <TextView
@@ -27,4 +24,13 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#173fc5"
         android:textStyle="bold"/>
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/shareButton"
+        android:src="@android:drawable/ic_menu_share"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
