--- a/app/src/main/res/layout/welcome_layout.xml
+++ b/app/src/main/res/layout/welcome_layout.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/grocery">
 
     <TextView
         android:id="@+id/textView"
@@ -15,9 +16,42 @@
         android:textSize="25dp"
         android:textStyle="bold" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="404dp"
-        android:layout_height="381dp"
-        android:background="@drawable/grocery" />
+    <!--<ImageView-->
+        <!--android:id="@+id/imageView"-->
+        <!--android:layout_width="404dp"-->
+        <!--android:layout_height="381dp"-->
+        <!--android:background="@drawable/grocery" />-->
+    <TextView
+        android:id="@+id/login_status"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:textAlignment="center"
+        android:layout_marginTop="20dp" />
+
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/login_with_facebook"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="25dp"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/login_with_facebook" />
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/login_with_google"
+        android:text="@string/login_with_google"
+        android:layout_width="match_parent"
+        android:layout_height="45dp" />
+    <Button
+        android:layout_width="80dp"
+        android:layout_height="40dp"
+        android:text="Skip"
+        android:id="@+id/skipbutton"
+        android:background="#3CB371"
+        android:layout_marginTop="25dp"
+        android:layout_gravity="center"
+        android:layout_centerHorizontal="true" />
+
 </LinearLayout>
