--- a/app/src/main/res/layout/note_edit.xml
+++ b/app/src/main/res/layout/note_edit.xml
@@ -1,18 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:background="#FFF9C8">
+	android:background="@android:color/holo_purple"
+	android:layout_height="match_parent">
+	<Button
+		android:id="@+id/buttondelete"
+		android:layout_width="40dp"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center_horizontal"
+		android:background="@drawable/ic_menu_delete"
+		android:layout_alignParentTop="true"
+		android:layout_alignParentRight="true"
+		android:layout_alignParentEnd="true" />
 	        
 	<RelativeLayout
 	    android:id="@+id/toplayout"
 	    android:background="@android:color/holo_purple"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
-	    android:layout_alignParentTop="true"
-	    android:paddingBottom="5dp"
+		android:paddingBottom="5dp"
 	    android:paddingLeft="5dp"
-	    android:paddingTop="5dp" >
+	    android:paddingTop="5dp"
+		android:layout_below="@+id/buttondelete"
+		android:layout_alignRight="@+id/body"
+		android:layout_alignEnd="@+id/body">
 		
 		<TextView android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
@@ -44,14 +55,16 @@
 	    android:id="@+id/body"
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
-	    android:layout_below="@+id/toplayout"
-	    class="com.scu.smartgrocerytracker.Notes.NoteEdit$LineEditText"
+		class="com.scu.smartgrocerytracker.Notes.NoteEdit$LineEditText"
 	    android:background="@android:color/holo_purple"
 	    android:capitalize="sentences"
 	    android:fadingEdge="vertical"
 	    android:gravity="top"
 	    android:padding="5dp"
 	    android:scrollbars="vertical"
-	    android:textSize="22sp" />
+	    android:textSize="22sp"
+		android:layout_below="@+id/toplayout"
+		android:layout_alignParentLeft="true"
+		android:layout_alignParentStart="true" />
 
 </RelativeLayout>
