--- a/app/src/main/res/layout/content_pref_store.xml
+++ b/app/src/main/res/layout/content_pref_store.xml
@@ -9,8 +9,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.scu.smartgrocerytracker.location.PrefStoreActivity"
-    tools:showIn="@layout/activity_pref_store">
+    tools:context="com.scu.smartgrocerytracker.location.PrefStoreActivity">
+    <!--tools:showIn="@layout/activity_pref_store"-->
+
 
     <TextView
         android:layout_width="wrap_content"
