--- a/app/src/main/res/layout/content_add_to_pantry.xml
+++ b/app/src/main/res/layout/content_add_to_pantry.xml
@@ -14,8 +14,8 @@
 
 
     <TextView
-        android:layout_width="60dp"
-        android:layout_height="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/itemNameTextView"
         android:layout_alignParentTop="true"
         android:layout_alignLeft="@+id/unitSpinner"
